# gloss

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml
.cargo/: config.toml
bindings/gloss_py/: Cargo.toml  README.md  generate_stubs.py  pyproject.toml
bindings/gloss_py/config/: depth_example.toml  empty_example.toml  viewer_config_example.toml
bindings/gloss_py/docker/: Dockerfile
bindings/gloss_py/examples/: cam_control.py  depth_map.py  empty.py  headless.py  intrinsics_extrinsics.py  keyboard_callback.py  model_matrix.py  mvp_test.py  read_obj.py  screen_record.py  show_lines.py  show_mesh_as_point_cloud.py  show_point_cloud.py  smpl_body.py  viewer_config.py
bindings/gloss_py/macros/: Cargo.toml
bindings/gloss_py/macros/src/: lib.rs
bindings/gloss_py/scripts/: build_and_publish.sh  build_local.sh  build_wheel.sh  generate_stubs.py
bindings/gloss_py/src/: actor.rs  camera.rs  device.rs  entity_builder.rs  geom.rs  img.rs  lib.rs  logger.rs  plugin.rs  queue.rs  scene.rs  texture.rs  viewer.rs  viewer_headless.rs
bindings/gloss_py/src/components/: colors.rs  diffuse_img.rs  edges.rs  faces.rs  mod.rs  model_matrix.rs  normal_img.rs  normals.rs  tangents.rs  uvs.rs  verts.rs  vis_edges.rs  vis_mesh.rs  vis_points.rs
crates/easy_wgpu/: Cargo.toml
crates/easy_wgpu/macros/: Cargo.toml
crates/easy_wgpu/macros/src/: lib.rs
crates/easy_wgpu/src/: bind_group.rs  bind_group_layout.rs  buffer.rs  egui.wgsl  egui_renderer.rs  framebuffer.rs  gpu.rs  lib.rs  mipmap.rs  pipeline.rs  texture.rs  utils.rs
crates/gloss/: Cargo.toml
crates/gloss/src/: lib.rs
crates/gloss_hecs/: Cargo.toml
crates/gloss_hecs/benches/: bench.rs
crates/gloss_hecs/examples/: ffa_simulation.rs  format.rs
crates/gloss_hecs/macros/: Cargo.toml
crates/gloss_hecs/macros/src/: bundle.rs  bundle_clone.rs  common.rs  lib.rs  query.rs
crates/gloss_hecs/src/: alignment.rs  archetype.rs  batch.rs  borrow.rs  bundle.rs  command_buffer.rs  entities.rs  entity_builder.rs  entity_ref.rs  layout.rs  lib.rs  query.rs  query_one.rs  stabletypeid.rs  take.rs  tracked.rs  world.rs
crates/gloss_hecs/src/serialize/: column.rs  mod.rs  row.rs
crates/gloss_img/: Cargo.toml
crates/gloss_img/src/: dynamic_image.rs  free_functions.rs  lib.rs
crates/gloss_img/src/old/: color.rs  traits.rs
crates/gloss_memory/: Cargo.toml
crates/gloss_memory/src/: accounting_allocator.rs  allocation_tracker.rs  backtrace_native.rs  backtrace_web.rs  lib.rs  memory_use.rs  readable_backtrace.rs
crates/gloss_renderer/: Cargo.toml  README.md
crates/gloss_renderer/config/: default.toml  example_minimal.toml  example_primitives.toml  example_view_mesh.toml
crates/gloss_renderer/macros/: Cargo.toml
crates/gloss_renderer/macros/src/: lib.rs
crates/gloss_renderer/shaders/: blit.wgsl  compose.wgsl  gbuffer_mesh_frag.wgsl  gbuffer_mesh_vert.wgsl  gbuffer_point.wgsl  gbuffer_point_instanced.wgsl  line_instanced.wgsl  shadow_map.wgsl
crates/gloss_renderer/shaders/bindings/: compose_binds.wgsl  global_binds.wgsl
crates/gloss_renderer/shaders/environment_map/: environment_map.wgsl
crates/gloss_renderer/shaders/pbr/: pbr_ambient.wgsl  pbr_deferred_functions.wgsl  pbr_fragment.wgsl  pbr_functions.wgsl  pbr_lighting.wgsl  pbr_tonemapping.wgsl
crates/gloss_renderer/shaders/types/: global_types.wgsl  pbr_types.wgsl
crates/gloss_renderer/shaders/utils/: constants.wgsl  full_screen_tri_utils.wgsl  noise_utils.wgsl  normal_utils.wgsl  num_utils.wgsl  shadow_sampling.wgsl  shadows.wgsl  tex_utils.wgsl  tonemap_utils.wgsl
crates/gloss_renderer/src/: actor.rs  camera.rs  config.rs  geom.rs  gui.rs  lib.rs  light.rs  logger.rs  scene.rs  viewer.rs  viewer_headless.rs
crates/gloss_renderer/src/components/: bundles.rs  cam_comps.rs  light_comps.rs  mesh_cpu_comps.rs  mesh_gpu_comps.rs  misc_comps.rs  mod.rs  render_comps.rs
crates/gloss_renderer/src/forward_renderer/: mod.rs  renderer.rs
crates/gloss_renderer/src/forward_renderer/render_passes/: blit_pass.rs  debug_pass.rs  line_pipeline.rs  main_pass.rs  mesh_pipeline.rs  mod.rs  pipeline_runner.rs  point_pipeline.rs  prepass.rs  shadow_pass.rs  upload_pass.rs  validation_pass.rs
crates/gloss_renderer/src/forward_renderer/render_platform/: bind_group_collection.rs  locals.rs  mod.rs
crates/gloss_renderer/src/plugin_manager/: mod.rs  plugins.rs  runner.rs  systems.rs
crates/gloss_renderer/src/plugin_manager/gui/: button.rs  checkbox.rs  mod.rs  selectable.rs  slider.rs  widgets.rs  window.rs
crates/gloss_utils/: Cargo.toml
crates/gloss_utils/macros/: Cargo.toml
crates/gloss_utils/src/: bshare.rs  config.rs  io.rs  logging.rs
crates/utils_rs/: Cargo.toml
crates/utils_rs/macros/src/: lib.rs
crates/utils_rs/src/: abi_stable_aliases.rs  gloss_image.rs  lib.rs  macros.rs  memory.rs  ndarray_inverse.rs  nshare.rs  numerical.rs  string.rs  tensor.rs  tonemap.rs  tuple.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/primitives/: Cargo.toml
examples/primitives/src/: main.rs
examples/view_mesh/: Cargo.toml
examples/view_mesh/src/: main.rs
examples/view_points/: Cargo.toml
examples/view_points/src/: main.rs
examples/web/: Cargo.toml
examples/web/gloss_webpage/: index.html
examples/web/src/: lib.rs
tests/: Cargo.toml  gloss_test.rs  requirements.txt
tests/correctness_tests/viewer_recreate/: run_viewer_recreate_test.py  viewer_recreate.toml
tests/reference_tests/: reference_cameras.json
tests/reference_tests/depth_test/: depth_test.toml  run_depth_test.py
tests/reference_tests/scripts/: generate_cameras.py  run_reference_generation.sh  save_reference_renders.py
tests/reference_tests/silhouette_test/: run_silhouette_test.py
tests/web/scripts/: compare_screenshot.js  screenshot.js
