[package]
name = "gloss_minimal"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"
publish = false
doc = false

[dependencies]
gloss-renderer = { path = "../../../gloss/crates/gloss_renderer", default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
# Exclude examples from being treated as crates
targets = ["lib"]  # Do not generate documentation for examples