[package]
name = "gloss_web"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloss-renderer = { path = "../../../gloss/crates/gloss_renderer", default-features = false }

# Third party
pollster.workspace=true
nalgebra.workspace=true
getrandom.workspace=true
burn.workspace=true

# More dependancies for wasm https://sotrh.github.io/learn-wgpu/beginner/tutorial1-window/#added-support-for-the-web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Document",
    "Window",
    "Element",
]}
js-sys = "0.3"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = []  # Do not generate documentation for examples