[package]
name = "easy_wgpu_macros"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
proc-macro = true
doc = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = "1.0"
quote = "1.0"
