[package]
name = "gloss_renderer_macros"
authors.workspace = true
edition.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true
